--- a/app/views/barbeiros/new.html.erb
+++ b/app/views/barbeiros/new.html.erb
@@ -11,18 +11,18 @@
 <% end %>
 <%= form_with scope: :barbeiro, url: barbeiros_path, local: true do |form| %>
   <p>
-    <%= form.label :nome %><br>
-    <%= form.text_field :nome %>
+    <%= form.label :Nome %><br>
+    <%= form.text_field :Nome %>
   </p>
 
   <p>
-    <%= form.label :email %><br>
-    <%= form.text_field :email %>
+    <%= form.label :Email %><br>
+    <%= form.text_field :Email %>
   </p>
 
   <p>
-    <%= form.label :senha %><br>
-    <%= form.password_field :senha %>
+    <%= form.label :Senha %><br>
+    <%= form.password_field :Senha %>
   </p>
 
   <p>
