--- a/app/views/sessoes/new.html.erb
+++ b/app/views/sessoes/new.html.erb
@@ -10,6 +10,11 @@
 </div>
 <div class="actions">
 <%= f.submit "Entrar" %>
+<% flash.each do |type, msg| %>
+    <div>
+        <p><%= msg %> </p>
+    </div>
+<% end %>
 </div>
-<p><%= link_to "Criar conta", new_usuario_path %></p>
+<p><%= link_to "Criar conta", cadastro_path %></p>
 <% end %>
