--- a/app/views/sessoes/new.html.erb
+++ b/app/views/sessoes/new.html.erb
@@ -9,7 +9,7 @@
 <%= f.password_field :password, autocomplete: "off" %>
 </div>
 <div class="actions">
-<%= f.submit "Entrar" %>
+<%= f.submit 'Login' %>
 </div>
 <p><%= link_to "Criar conta", new_usuario_path %></p>
 <% end %>
