test: adicionar testes da feature de alteracao de senha

--- a/app/views/usuarios/_formulario.html.erb
+++ b/app/views/usuarios/_formulario.html.erb
@@ -20,7 +20,7 @@
                         <%= f.email_field :email %>
             </div>
             <div class="field">
-                        <%= f.label :password %>
+                        <%= f.label :senha %>
                         <%= f.password_field :password %>
             </div>
             <% if !pagina_edicao %>
