--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,6 +5,7 @@
         <% if logado? %>
           <ul>
               <li><%= link_to "Meu perfil", perfil_path(usuario_atual) %></li>
+              <li><%= link_to "Meus Agendamentos",  "/agendamentos-barbeiro/#{@usuario.nome}?data=#{Date.current()}" %></li>
               <li>
                 <%= link_to "Sair", logout, method: "delete" %>
               </li>
