ajustes agendamento cliente para pegar usuário logado

--- a/app/views/agendamentos/new.html.erb
+++ b/app/views/agendamentos/new.html.erb
@@ -13,18 +13,18 @@
 
   <p>
     <%= form.label :"Nome Barbeiro"%><br>
-    <%= form.text_field :nomeBarbeiro %>
+    <%= form.number_field :idBarbeiro %>
   </p>
 
   <p>
     <%= form.label :"Nome Serviço"%><br>
-    <%= form.text_field :nomeServico %>
+    <%= form.number_field :idServico %>
   </p>
 
 
   <p>
     <%= form.label :"Data Serviço"%><br>
-    <%= form.datetime_select :dataAgendada %>
+    <%= form.datetime_select :dataAgendamento %>
   </p>
 
   <p>
