--- a/app/views/agendamentos/show.html.erb
+++ b/app/views/agendamentos/show.html.erb
@@ -1,19 +1,19 @@
 <p>
   <strong>nome Cliente:</strong>
-  <%= @agendamento.nomeCliente %>
+  <%= @agendamento.idCliente %>
 </p>
 
 <p>
   <strong>nome barbeiro:</strong>
-  <%= @agendamento.nomeBarbeiro %>
+  <%= @agendamento.idBarbeiro %>
 </p>
 
 <p>
   <strong>servico agendado:</strong>
-  <%= @agendamento.nomeServico %>
+  <%= @agendamento.idServico %>
 </p>
 
 <p>
   <strong>data agendada:</strong>
-  <%= @agendamento.dataAgendada %>
+  <%= @agendamento.dataAgendamento %>
 </p>
