--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,6 +5,8 @@
         <% if logado? %>
           <ul>
               <li><%= link_to "Meu perfil", perfil_path(usuario_atual) %></li>
+              <li><%= link_to 'agendar servico', agendamentos_new_path %></li>
+
               <li>
                 <%= link_to "Sair", logout, method: "delete" %>
               </li>
