--- a/app/views/usuarios/new.html.erb
+++ b/app/views/usuarios/new.html.erb
@@ -1,2 +1,8 @@
-<h1>Cadastro</h1>
-<%= render 'formulario', pagina_edicao: false %>
+<div class="container">
+    <div class="background"></div>
+    <div class="content">
+        <img src="../../assets/logo.png" class="content__logo">
+        <%= render 'formulario', pagina_edicao: false %>
+        <a href="login" class="content__link">&larr; Voltar para o login</a>
+    </div>
+</div>
