--- a/app/views/agendamentos/show.html.erb
+++ b/app/views/agendamentos/show.html.erb
@@ -1,19 +1,3 @@
 <p>
-  <strong>nome Cliente:</strong>
-  <%= @agendamento.idCliente %>
-</p>
-
-<p>
-  <strong>nome barbeiro:</strong>
-  <%= @agendamento.idBarbeiro %>
-</p>
-
-<p>
-  <strong>servico agendado:</strong>
-  <%= @agendamento.idServico %>
-</p>
-
-<p>
-  <strong>data agendada:</strong>
-  <%= @agendamento.dataAgendamento %>
+Agendamento realizado com sucesso
 </p>
