--- a/app/assets/stylesheets/home_styles.css.erb
+++ b/app/assets/stylesheets/home_styles.css.erb
@@ -5,7 +5,7 @@
 }
 
 .background {
-  background: url('../../assets/sign-up-background.png') no-repeat center;
+  background-image: url(<%= asset_path 'sign-up-background.png' %>);
   background-size: cover;
 }
 
