--- a/app/views/usuarios/_formulario.html.erb
+++ b/app/views/usuarios/_formulario.html.erb
@@ -23,10 +23,10 @@
                 <%= f.text_field :nome, placeholder: "Nome" %>
             </div>
             <div class="content__field">
-                <%= f.email_field :email, placeholder: "E-mail" %>
+                <%= f.email_field :email, placeholder: "E-mail", id:"email" %>
             </div>
             <div class="content__field">
-                <%= f.password_field :password, placeholder: "Senha" %>
+                <%= f.password_field :password, placeholder: "Senha", id:"password" %>
             </div>
             <div class="content__btn">
                 <%= f.submit pagina_edicao ? "Confirmar": "Cadastrar" %>
