--- a/app/views/agendamentos/show.html.erb
+++ b/app/views/agendamentos/show.html.erb
@@ -11,7 +11,8 @@
 <p>
   <strong>data agendada:</strong>
   <%= @agendamento.dataAgendamento %>
-
-Agendamento realizado com sucesso
-
 </p>
+
+<p>Agendamento realizado com sucesso!</p>
+
+<%= link_to "Voltar", "/usuarios/#{session[:idUsuario]}" %></li>
