--- a/app/views/usuarios/show.html.erb
+++ b/app/views/usuarios/show.html.erb
@@ -2,5 +2,12 @@
     <body>
         <h3> Perfil <%= @usuario.nome %> </h3>
         <%= @usuario.email %>
+        <p>Este perfil é de um 
+            <% if !session[:isBarbeiro] %>
+                Barbeiro
+            <% else %>
+                Cliente
+            <% end %>
+        </p>
     </body>
 </html>
