--- a/app/views/sessoes/_formulario.html.erb
+++ b/app/views/sessoes/_formulario.html.erb
@@ -1,4 +1,4 @@
-<%= form_for :session, url: login_path do |f| %>
+<%= form_with url: login_path do |f| %>
     <div class="field">
         <div class="content__field">
             <%= f.email_field :email, placeholder: "E-mail", id:"email" %>
