--- a/app/views/usuarios/_formulario.html.erb
+++ b/app/views/usuarios/_formulario.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @usuario do |f| %>
+<%= form_with model: @usuario, url: cadastro_path do |f| %>
             <% if @usuario.errors.any? %>
             <div id="error_explanation">
                         <div class="alert-error">
@@ -11,14 +11,6 @@
                         </ul>
             </div>
 <% end %>
-            <% if !pagina_edicao %>
-                <div class="content__radio">
-                    <%= f.radio_button :iscliente, true, {checked: true} %>
-                    <%= f.label :iscliente_true, "Sou cliente" %>
-                    <%= f.radio_button :iscliente, false %>
-                    <%= f.label :iscliente_false, "Sou cabeleireiro" %>
-                </div>
-            <% end %>
             <div class="content__field">
                 <%= f.text_field :nome, placeholder: "Nome" %>
             </div>
@@ -29,7 +21,7 @@
                 <%= f.password_field :password, placeholder: "Senha", id:"password" %>
             </div>
             <div class="content__btn">
-                <%= f.submit pagina_edicao ? "Confirmar": "Cadastrar" %>
+                <%= f.submit "Cadastrar" %>
             </div>
 
             <% flash.each do |type, msg| %>
