--- a/app/views/agendamentos/show.html.erb
+++ b/app/views/agendamentos/show.html.erb
@@ -15,4 +15,4 @@
 
 <p>Agendamento realizado com sucesso!</p>
 
-<%= link_to "Voltar", "/usuarios/#{session[:idUsuario]}" %></li>
+<%= link_to "Voltar", root_path %></li>
