--- a/app/views/agendamentos/barbeador.erb
+++ b/app/views/agendamentos/barbeador.erb
@@ -23,4 +23,4 @@
     <% end %>
 <% end %>
 
-<%= link_to "Voltar", "/usuarios/#{session[:usuario_id]}" %></li>
+<%= link_to "Voltar", root_path %></li>
