--- a/app/views/agendamentos/barbeador.erb
+++ b/app/views/agendamentos/barbeador.erb
@@ -1,6 +1,6 @@
 <h1>Listagem de agendamentos - <%= Date.parse(params[:data]).to_fs(:long) %></h1>
 <%= link_to "<", "/agendamentos-barbeiro/#{session[:usuario_id]}?data=#{(params[:data].to_date-1).to_s}" %>
-<span><%= Date.parse(params[:data]).strftime('%m/%d/%Y') %></span>
+<span><%= Date.parse(params[:data]).strftime('%d/%m/%Y') %></span>
 <%= link_to ">", "/agendamentos-barbeiro/#{session[:usuario_id]}?data=#{(params[:data].to_date+1).to_s}" %>
 <br>
 <% if @agendamentos.blank? %>
