--- a/app/views/agendamentos/barbeador.erb
+++ b/app/views/agendamentos/barbeador.erb
@@ -17,7 +17,7 @@
 
         <p>
             <strong>Horário:</strong>
-            <%= agendamento.dataAgendamento.strftime("%I:%M%p") %>
+            <%= agendamento.dataAgendamento.strftime("%k:%M") %>
         </p>
         <br>
     <% end %>
