--- a/app/views/agendamentos/new.html.erb
+++ b/app/views/agendamentos/new.html.erb
@@ -21,7 +21,7 @@
   <br>
   <p>
     <%= form.label :"Data Serviço"%><br>
-    <%= form.datetime_select :dataAgendamento %>
+    <%= form.datetime_select :data_agendamento %>
   </p>
   <br>
 
