--- a/app/views/agendamentos/show.html.erb
+++ b/app/views/agendamentos/show.html.erb
@@ -10,7 +10,7 @@
 
 <p>
   <strong>Data agendada:</strong>
-  <%= @agendamento.dataAgendamento.strftime("%d/%m/%Y, às %k:%M") %>
+  <%= @agendamento.data_agendamento.strftime("%d/%m/%Y, às %k:%M") %>
 </p>
 
 <p>Agendamento realizado com sucesso!</p>
