--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,13 @@
   </head>
 
   <body>
-    <%= render 'layouts/header' %>
+   <% current_URI = request.env['PATH_INFO'] %>
+  <% puts current_URI
+      puts current_URI
+  %>
+    <% if current_URI != '/login' && current_URI != '/cadastro'  %>
+        <%= render 'layouts/header' %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
