--- a/app/assets/stylesheets/home_styles.css.erb
+++ b/app/assets/stylesheets/home_styles.css.erb
@@ -17,6 +17,12 @@
   background: #312E38;
 }
 
+.content__title {
+  color: #fff;
+  max-width: 320px;
+  margin-bottom: 50px;
+}
+
 .content__logo {
   margin-bottom: 75px;
 }
