fix: sender email in application mailer

--- a/app/views/usuarios/password.html.erb
+++ b/app/views/usuarios/password.html.erb
@@ -2,7 +2,7 @@
     <div class="background"></div>
     <div class="content">
         <%= image_tag "logo.png", :class=>"content__logo" %>
-        <h3 class="content__title">Por favor, insira seu endereço de email. Enviaremos um email para que possa resetar sua senha.</h3>
+        <h3 class="content__title">Por favor, insira seu endereço de email. Enviaremos um email para que possa recuperar sua senha.</h3>
         <%= form_with do |f| %>
             <div class="content__field">
                 <%= f.email_field :email, placeholder: "E-mail", id:"email" %>
