test: adicionar testes agendamento_cliente

--- a/app/views/dashboard/_cartao_agendamento.html.erb
+++ b/app/views/dashboard/_cartao_agendamento.html.erb
@@ -1,6 +1,6 @@
 <% if primeiro %>
     <%= link_to agendamento_path(agendamento), :class => "a" do %>
-        <div class="cartao_agendamento__container primeiro">
+        <div class="cartao_agendamento__container primeiro" id="primeiro">
             
             <div class="cartao_agendamento__info_usuario">
                 <%= image_tag "user.jpg", :id=>"primeiro__foto" %>
