--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -41,7 +41,10 @@
       <% end %>
    </div>
    <div class="dashboard__right_container">
+      <span class="dashboard__proximo_agendamento">
+         EM BREVE...
+      </span>
 
-      <p> Aqui vai entrar o picker de calendário </p>
+      <p> Pickler de calendário </p>
    </div>
 </div>
