--- a/app/views/agendamentos/barbeador.erb
+++ b/app/views/agendamentos/barbeador.erb
@@ -35,8 +35,16 @@
 
 <script>
 function changeDate(userId) {
-    var data = document.getElementById("data_alterar_date_1i").value +"-"+ document.getElementById("data_alterar_date_2i").value +"-"+
-    document.getElementById("data_alterar_date_3i").value;
+    var mes=document.getElementById("data_alterar_date_2i").value;
+    var dia=document.getElementById("data_alterar_date_3i").value;
+
+    if(mes.length==1){
+      mes='0'+mes;
+    }
+    if(dia.length==1){
+      dia='0'+dia;
+    }
+    var data = document.getElementById("data_alterar_date_1i").value +"-"+ mes +"-"+ dia;
     window.location.href = "http://localhost:3000/agendamentos-barbeiro/"+userId+"?data="+data;
 }
 </script>
