feat: add link to recover-password page

--- a/app/assets/stylesheets/home_styles.css.erb
+++ b/app/assets/stylesheets/home_styles.css.erb
@@ -78,6 +78,18 @@
   margin-top: 50px;
 }
 
+.content__link--password {
+  display: block;
+  text-align: center;
+  margin: 25px 0;
+}
+
+.content__link--register {
+  display: block;
+  text-align: center;
+  color: #FF9000;
+}
+
 @media screen and (max-width: 1024px) {
   .container {
     grid-template-columns: auto;
