feat: add link to return to login in recover-password page

--- a/app/views/usuarios/password.html.erb
+++ b/app/views/usuarios/password.html.erb
@@ -16,5 +16,9 @@
                 </div>
             <% end %>
         <% end %>
+         <div class="content__link">
+            &larr; 
+            <%= link_to 'Voltar para o login', login_path, class:"content__link" %>
+        </div>
     </div>
 </div>
