ajuste para o email ser enviado

--- a/app/views/usuarios/password.html.erb
+++ b/app/views/usuarios/password.html.erb
@@ -16,5 +16,8 @@
                 </div>
             <% end %>
         <% end %>
+    <%= link_to "Voltar", root_path %></li>
+
     </div>
+
 </div>
